[gd_scene load_steps=6 format=3 uid="uid://civv53vemn5qb"]

[ext_resource type="Script" path="res://Scripts/UI/fail_menu.gd" id="1_e2sgb"]
[ext_resource type="Texture2D" uid="uid://bbya7402hqra4" path="res://Sprites/Score Frame.png" id="1_vy0ny"]
[ext_resource type="Texture2D" uid="uid://dne2sfo5khndt" path="res://Sprites/main_menu_button.png" id="2_ge8qd"]
[ext_resource type="Texture2D" uid="uid://ckxhynrtr11un" path="res://Sprites/retry_button.png" id="3_0jx4o"]
[ext_resource type="Texture2D" uid="uid://dbs3f5ha8a7d4" path="res://Sprites/quit_button.png" id="4_w43i3"]

[node name="Fail_Menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_e2sgb")

[node name="ScoreFrame" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 500)
scale = Vector2(10, 10)
texture = ExtResource("1_vy0ny")

[node name="homeButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 720.0
offset_top = 950.0
offset_right = 738.0
offset_bottom = 968.0
scale = Vector2(10, 10)
pivot_offset = Vector2(9, 9)
texture_normal = ExtResource("2_ge8qd")
stretch_mode = 3

[node name="retryButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 960.0
offset_top = 950.0
offset_right = 978.0
offset_bottom = 968.0
scale = Vector2(10, 10)
pivot_offset = Vector2(9, 9)
texture_normal = ExtResource("3_0jx4o")
stretch_mode = 3

[node name="quitButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 1200.0
offset_top = 950.0
offset_right = 1218.0
offset_bottom = 968.0
scale = Vector2(10, 10)
pivot_offset = Vector2(9, 9)
texture_normal = ExtResource("4_w43i3")
stretch_mode = 3

[connection signal="button_down" from="homeButton" to="." method="_on_home_button_button_down"]
[connection signal="button_down" from="retryButton" to="." method="_on_retry_button_button_down"]
[connection signal="button_down" from="quitButton" to="." method="_on_quit_button_button_down"]
